# onnxruntime-training-examples

./: .gitignore  .gitmodules  README.md  cgmanifest.json
.devcontainer/: Dockerfile
DragGAN/: .gitignore  README.md  checkpoint_converter.py  conv0.py  conv1.py  create_vid.bat  draggan_demo.py  draggan_onnx_demo.py  first_block.py  grid_sample.py  handles.json  rgb.py  style_generator.py  style_mapper.py  stylegan_demo.py  stylegan_onnx_demo.py  synth_block.py
DragGAN/DragGANApp/: DragGANApp.sln  Options.json
DragGAN/dnnlib/: util.py
DragGAN/torch_utils/: persistence.py
ImageClassification-finetune/: README.md  aml_submit.py
ImageClassification-finetune/environment/: Dockerfile
QnA-finetune/: ORT_Demo.pptx  README.md  aml_submit.py  inference_chat.py  score.py
QnA-finetune/finetune-code/: ds_config_zero_1.json  finetune.py
StableDiffusion-finetune/: README.md  aml_submit.py
StableDiffusion-finetune/environment/: Dockerfile
StableDiffusion-finetune/finetune-code/: accelerate_config.yaml  aml_upload_util.py  train_text_to_image.py  train_text_to_image_ort.py
T5/: Notebook_train_summarization_deepspeed_optum.ipynb  Notebook_train_summarization_optimum.ipynb
aml-acpt-ort-e2e-examples/dolly-finetune/: aml_submit.py  inference.py  instruct_pipeline.py  (+2 more)
aml_vision/: aml_submit.py  ws_config_template.json
distilbert-finetune/: README.md  aml_submit.py  inference.py  inference_chat.py  ws_config.json
docker/: Dockerfile  build.sh  launch.sh
getting-started/: .gitignore  README.md  model.py  predict.py  train.py  train_ort.py
huggingface/: BART.md  BERT.md  DeBERTa.md  DistilBERT.md  GPT2.md  README.md  RoBERTa.md  T5.md
huggingface-gpt2/: README.md
llama3-finetune/: README.md  aml_submit_clm.py
mistral-finetune/: README.md  aml_submit_clm.py
nvidia-bert/: README.md  model_evaluation.md  run_pretraining.py  run_pretraining.sh  setup_workspace.sh
nvidia-bioBERT/: README.md  bertPrep.py
on_device_training/: README.md
on_device_training/android_demo/android_application/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
phi2-finetune/: README.md  aml_submit_clm.py
phi3-finetune/: README.md  aml_submit_clm.py
whisper-finetune/: README.md  aml_submit.py  inference.py  inference_endpoint.py  inference_ort.py  score.py
(+381 files in other folders)
